--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/CesarAdan1/api-v1#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "chalk": "^2.4.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
