--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.16",
     "morgan": "^1.9.1",
+    "multer": "^1.4.0",
     "nodemailer": "^4.6.8",
     "pug": "^2.0.3"
   },
