--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-fileupload": "^1.0.0-alpha.1",
+    "express-formidable": "^1.0.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.16",
     "morgan": "^1.9.1",
